# student-journal

./: .gitignore  LICENSE  Makefile  README.md  build.py  pyproject.toml  run.py
.github/workflows/: continuous-delivery.yml  continuous-integration.yml
app/: __init__.py  config.py  pages.py
app/notes/: ab-test.md  barplot.md  bernoulli-distribution.md  beta-distribution.md  binomial-distribution.md  boxplot.md  concepts.md  correlation-coefficient.md  covariance.md  data-analysis.md  dbscan.md  distributions.md  f-statistic.md  gaussian-mixture-model.md  heatmap.md  histogram.md  kolmogorov-smirnov-test.md  kolmogorov–smirnov-test.md  l1-regularization.md  linear-regression.md  lineplot.md  math-symbols.md  math.md  mean.md  median.md  methods.md  models.md  monte-carlo-method.md  multi-armed-bandit.md  normal-distribution.md  null-hypothesis.md  p-value.md  permutation-test.md  plots.md  poisson-distribution.md  probability-distribution.md  qq-plot.md  scatterplot.md  standard-deviation.md  statistics.md  (+7 more)
app/static/: style.css
app/templates/: base.html
app/templates/includes/: footer.html  header.html  search-icon.html  search.html
app/templates/pages/: about.html  index.html  not-found.html  note-detail.html  note-list.html
app/utils/: __init__.py  converter.py  generators.py
tests/: test___init__.py
