[project]
name = ""
version = ""
description = ""
authors = [
    { name = "Koen van Esterik", email = "kd.vanesterik@student.han.nl" },
]
dependencies = [
    "flask>=3.0.0",
    "markdown>=3.5.1",
    "pygments>=2.17.2",
    "pydantic>=2.5.3",
    "frozen-flask>=1.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["mypy>=1.8.0", "black>=23.12.0", "isort>=5.13.2", "ruff>=0.1.9"]
